--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700" rel="stylesheet" />
 </head>
 
 <body>
