--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container>
+  <div class="container">
     <div id="color-calendar"></div>
     <div id="events-display"></div>
   </div>
